--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-  "name": "provision/searchable",
+  "name": "thinkeyk/searchable",
   "version": "dev",
   "type": "library",
   "description": "Searchable indexing with MySQL full text for Laravel",
@@ -9,15 +9,18 @@
     "mysql",
     "laravel"
   ],
-  "homepage": "https://github.com/provisionbg/searchable",
+  "homepage": "https://github.com/thinkeyk/searchable",
   "license": "MIT",
   "authors": [
     {
       "name": "Venelin Iliev",
       "email": "venelin@provision.bg",
       "homepage": "https://veneliniliev.com"
+    },
+    {
+      'name': 'Thinley Koblensky'
+      'email': 'thinley.koblensky@gmail.com'
     }
-  ],
   "require": {
     "php": "^7.1.3",
     "laravel/framework": "5.7.*|5.8.*|^6.0|^7.0"
