--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
   "name": "thinkeyk/searchable",
-  "version": "dev",
+  "version": "dev-master",
   "type": "library",
   "description": "Searchable indexing with MySQL full text for Laravel",
   "keywords": [
@@ -18,38 +18,39 @@
       "homepage": "https://veneliniliev.com"
     },
     {
-      'name': 'Thinley Koblensky'
-      'email': 'thinley.koblensky@gmail.com'
+      "name": "Thinley Koblensky",
+      "email": "thinley.koblensky@gmail.com"
     }
+  ],
   "require": {
-    "php": "^7.1.3",
-    "laravel/framework": "5.7.*|5.8.*|^6.0|^7.0"
-  },
-  "require-dev": {
-    "mockery/mockery": "^1.0",
-    "phpunit/phpunit": "^7.0|^8.0"
-  },
-  "autoload": {
-    "psr-4": {
-      "ProVision\\Searchable\\": "src/"
+      "php": "^7.1.3",
+      "laravel/framework": "5.7.*|5.8.*|^6.0|^7.0"
+    },
+    "require-dev": {
+      "mockery/mockery": "^1.0",
+      "phpunit/phpunit": "^7.0|^8.0"
+    },
+    "autoload": {
+      "psr-4": {
+        "ProVision\\Searchable\\": "src/"
+      }
+    },
+    "autoload-dev": {
+      "psr-4": {
+        "ProVision\\Searchable\\Tests\\": "tests/"
+      }
+    },
+    "scripts": {
+      "test": "phpunit"
+    },
+    "extra": {
+      "laravel": {
+        "providers": [
+          "ProVision\\Searchable\\ServiceProvider"
+        ]
+      }
+    },
+    "config": {
+      "sort-packages": true
     }
-  },
-  "autoload-dev": {
-    "psr-4": {
-      "ProVision\\Searchable\\Tests\\": "tests/"
-    }
-  },
-  "scripts": {
-    "test": "phpunit"
-  },
-  "extra": {
-    "laravel": {
-      "providers": [
-        "ProVision\\Searchable\\ServiceProvider"
-      ]
-    }
-  },
-  "config": {
-    "sort-packages": true
   }
-}
